style.css
* {
  margin: 0 auto;
  padding: 0;
  text-decoration: none;
}
html {
  /* background-color: #af8e00; */
  background-color: #fff;
  /* background-color: #d1d1c4; */
  /* background-color: #fffcf1; */
  box-sizing: border-box;
  height:100%;
  cursor: none;
}
:focus {
  outline: 0;
}

body {
  transition: background 1.5s ease-in-out, 
              color 1s ease-in-out, 
              stroke 1s ease-in-out;
}

.panel {
  display: flex;
}
#main-panel, #about-panel {
  height: 170vh;
}

.color-pink {
  background-color: #e6c1f0;
  color: #ee6d56;
  stroke: #ee6d56;
}

.color-white {
  background-color: #fff;
  color: #000;
  stroke: #000;
}

.color-black {
  background-color: #000;
  color: #fff;
  stroke: #fff;
}

.cursor{
  left: 0;
  top: 0;
  width: 20px;
  height: 20px;
  background-color: none;
  position: fixed;
  border-radius: 50%;
  z-index: 999;
  border: solid 1px;
  border-color: rgb(238, 109, 86);
}
body {
  overflow: auto;
}

/* NAV MENU */
.navigation-menu {
  /* width: 1rem;
  text-align: left; */
  position: fixed;
  top: 45%;
  left: -9rem;
  z-index: 99;
  height: auto;
}
li {
  list-style: none;
  font-size: 1.5rem;
  font-family: 'Karla', sans-serif;
  letter-spacing: 6px;
}
.navigation-menu ul {
  transform: rotate(-90deg);
}
.navigation-menu ul li {
  font-size: 1.1rem;
  color: #f46c4e;
  display: inline-block;
}
.navigation-menu ul li a {
  margin-right: 3rem;
}
a:visited {
  color: #000;
}
#about-button,
#work-button,
#contact-button {
  color:#8b7dff;
  cursor: none;
}

.strike-through {
  display: block;
  position: relative;
}
.strike-through:before,
.strike-through:after {
  background: #f46c4e;
  content: '';
  height: 2px;
  margin-top: -0.5px;
  position: absolute;
  top: 50%;
  width: 0%;
}
.strike-through:before {
  left: -2.5px;
}
.strike-through:after {
  background: #f46c4e;
  right: 2.5px;
  transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
}
.strike-through:hover:before {
  background: #f46c4e;
  transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
  width: 100%;
}
.strike-through:hover:after {
  background: transparent;
  transition: 0s;
  width: 100%;
}

/* MAIN */
main {
  height: fit-content;
  position: relative;
  top: 25px;
}
/* main .section-container {
  position: relative;
  height: 50rem;
  margin-top: 5rem;
} */
#line-left {
  stroke-dasharray: 1000;
  stroke-dashoffset: 1000;
  animation: dash 3s linear forwards ;
  animation-timing-function: ease-in;
  position: relative;
  bottom: 16.5rem;
  left: -24.5rem;
}
#line-about-me {
  stroke-dasharray: 1000;
  stroke-dashoffset: 1000;
  animation: dash 3s linear forwards;
  animation-delay: 2s;
  animation-timing-function: ease-in;
  position: relative;
  bottom: 0.5rem;
  stroke-width: 3;
  /* left: 15rem; */
}

#line-work {
  stroke-dasharray: 1000;
  stroke-dashoffset: 1000;
  animation: dash 2s linear forwards ;
  animation-delay: 2s;
  animation-timing-function: ease-in;
  position: relative;
  bottom: 0.5rem;
  stroke-width: 3;
  /* left: -12.4rem; */
}
#line-contact {
  stroke-dasharray: 1000;
  stroke-dashoffset: 1000;
  animation: dash 2s linear forwards ;
  animation-delay: 2s;
  animation-timing-function: ease-in;
  position: relative;
  bottom: 0.5rem;
  stroke-width: 3;
}
#line-vertical{
  stroke-dasharray: 1000;
  stroke-dashoffset: 1000;
  animation: dash 2s linear forwards ;
  animation-timing-function: ease-in;
  position: relative;
  bottom: 25.5rem;
  left: 8rem;
}

@keyframes dash {
  to {
    stroke-dashoffset: 0;
  }
}
main .section-container .name {
  padding-top: 2.8rem;
  text-align: right;
  z-index: 1;
  /* font-family: 'Archivo', sans-serif; */
  font-family: 'Snippet', sans-serif;
  font-size: 4.9rem;
  font-weight: 400;
  letter-spacing: 11.7px;
  color: #000;
  width: fit-content;
  left: 5%;
  position: relative;
}

main .section-container .name #mitchell{
  top: -2rem;
  position: relative;
}
#l-letter {
  height: 196px;
  position: relative;
  top: -23.7rem;
  left: 27rem;
}
#multi-shapes {
  width: 27rem;
  position: relative;
  top: -37.8rem;
  right: 6.35rem;
  z-index: 2;
}
#green-shape {
  position: relative;
  width: 3rem;
  top: -48rem;
  left: 7rem;
  z-index: 2;
}

main .dev-container {
  height: 0px;
  color: #000;
  font-family: 'Karla';
  font-size: 1rem;
  font-weight: 800;
  letter-spacing: 3px;
  padding: 1rem;
  text-align: right;
  width: fit-content;
}
main .about {
  display: block;
  font-family: 'Karla', sans-serif;
  letter-spacing: 3px;
  margin: 0 auto;
  position: relative;
  text-align: center;
  height: 43rem;
  width: 45.5rem;
}
/* div#about-container {
  background-color: #000;
} */
.section-header {
  font-family: 'Archivo', sans-serif;
  font-weight: 700;
  font-size: 1.5rem;
  /* font-size: 9rem; */
  /* text-align: center; */
}
#header-about {
  top: -100px;
  position: relative;
  /* float: right; */
  letter-spacing: 22px;
  font-size: 1.5rem;
  /* left: -16rem;*/
}

#hello-section {
  font-family: 'Archivo', sans-serif;
  height: 0;
  width: 0;
  font-size: 2rem;
  opacity: 0;
  animation: port 3s 1 forwards;
  -webkit-animation: port 3s 1 forwards;
}

#hello-container {
  height: 10px;
}
#main-hello {
  position: relative;
  font-size: 3rem;
  writing-mode: vertical-rl;
  text-orientation: sideways;
  transform: rotate(180deg);
  left: 25%;
  bottom: 37rem;
  font-family: 'Karla', sans-serif;
  letter-spacing: 43px;
  display: none
}
#main-hello:hover {
  cursor: none;
}
main .intro #hello {
  font-size: 3.8rem;
  letter-spacing: 2px;
  position: relative;
  z-index: 2;
  color: #000;
  font-family: 'Archivo', serif;
}

/* LETTERS - hello */

div p:nth-of-type(2){
  animation-delay: 0.1s;
  -webkit-animation-delay: 0.1s;
}

div p:nth-of-type(3){
  animation-delay: 0.2s;
  -webkit-animation-delay: 0.2s;
}

div p:nth-of-type(4){
  animation-delay: 0.3s;
  -webkit-animation-delay: 0.3s;
}

div p:nth-of-type(5){
  animation-delay: 0.4s;
  -webkit-animation-delay: 0.4s;
}

div p:nth-of-type(6){
  animation-delay: 0.5s;
  -webkit-animation-delay: 0.5s;
}

div p:nth-of-type(7){
  animation-delay: 0.6s;
  -webkit-animation-delay: 0.6s;
}

div p:nth-of-type(8){
  animation-delay: 0.7s;
  -webkit-animation-delay: 0.7s;
}

div p:nth-of-type(9){
  animation-delay: 0.8s;
  -webkit-animation-delay: 0.8s;
}

div:hover p {
  animation: reset 1s 1;
  -webkit-animation: reset 1s 1 ;
}

@keyframes port {
  0%{
    transform: rotateY(90deg) translateY(25%);
    opacity: 0.0;
  }
  100%{
    transform: rotateY(0deg) translateY(0%);
    opacity: 1.0;
  }
}

@-webkit-keyframes port {
  0%{
   -webkit-transform: rotateY(90deg) translateY(25%);
    opacity: 0.0;
  }
  100%{
    -webkit-transform: rotateY(0deg) translateY(0%);
    opacity: 1.0;
  }
}

@keyframes reset {
  0%{}
  100%{}
}

@-webkit-keyframes reset {
  0%{}
  100%{}
}

#h {
  position: relative;
  left: -23rem;
    top: -16rem;
  /* color: #f46c4e; */
}
#e {
  position: relative;
  left: -19rem;
  top: -22rem;
  /* color: #009782; */
}
#l1 {
  position: relative;
  left: 0rem;
    top: -15rem;
  /* color: #3d3dff; */
}
#l2 {
  position: relative;
  top: -9rem;
  left: -10rem;
  /* color: #af8e00; */
}
#o {
  position: relative;
  top: -15rem;
  left: 23rem;
  /* color: #f763ff; */
}
#web-dev {
  right: -27%;
  position: relative;
  bottom: 7.7rem;
  text-align: center;
  padding: 5px;
}
#create-span {
  color: #000;
  float: right;
  width: 23.0rem;
  font-size: 2rem;
  font-family: 'Archivo', sans-serif;
  letter-spacing: 5px;
  padding: 1rem;
  right: -12%;
  bottom: 6rem;
  cursor: none;
  position: relative;
} 
#create-something-link {
  margin: 0;
  color: #000;
  width: 11rem;
  float: right;
  cursor: none;
}

#about-text {
  width: 36rem;
  position: relative;
  float: left;
}
.intro-span {
  z-index: 98;
  height: fit-content;
  line-height: 1.4;
  font-size: 1.5rem;
  letter-spacing: 5px;
  text-align: left;
}

#passionate-span {
  width: 26rem;
  font-style: italic;
  font-weight: 700;
  margin: 3rem 0 0 0;
}
#span-art, #span-design, #span-outdoors {
  width: 5rem;
  font-size: 5rem;
}
#extra-info-span {
  height: 40rem;
  text-align: justify;
  font-size: 3rem;
  font-family: 'Karla', sans-serif;
  top: 11vh;
  position: relative;
}
/* #headshot {
  width: 320px;
  position: relative;
  display: inline-block;
  padding: 1.5rem;
  border-radius: 50%;
  left: 15rem;
  top: -29rem;
} */
#about-hello-span {
  margin-right: 15rem;
}
#header-work {
  top: -4.79rem;
  position: relative;
  letter-spacing: 20px;
  width: fit-content;
}

/* WORK section */

#work-panel {
  margin-top: 35rem;
  height: 140vh;
}
#work-container {
  position: relative;
  font-family: 'Karla', sans-serif;
}
.work {
  display: block;
  height: 40rem;
}
.skills-container {
  width: fit-content;
  float: right;
  position: relative;
  text-align: right;
  margin: 0;
  top: -5rem;
  color: #f46c4e;
  background-color: #cfd2ff;
  padding: 0 20px 20px;
}
#skills-text {
  font-size: 2rem;
  font-weight: 900;
  padding: 1rem 0;
}
.project-container {
  font-size: 3rem;
  margin: 0 0 1rem 0;
  position: relative;
}
#selected-container {
  position: relative;
}
#selected-header {
  font-size: 2rem;
  margin: 4rem 2rem 6rem 0rem;
  letter-spacing: 6px;
}
#selected-p {
  font-size: 1.5rem;
  margin: 0 0 4rem 0;
  width: 17rem;
}
#flashcards {
  width: 35%;
}
#flashcards-header {
  position: absolute;
  top: 3rem;
  left: -3rem;
  letter-spacing: 6px;
  font-family: 'Karla', sans-serif
  /* color: #978a00; */
}
#flashcards a:visited {
  color: #000;
}
.project-image {
  width: 300px;
  height: 200px;
}
#flashcards-image {
  background: url('./images/flashcards_image.jpg') no-repeat center;
  background-size: cover;
}
#budget-app-image {
  background: url('./images/budget-image.jpg') no-repeat center;
  background-size: cover;
}
.image-overlay {
  width: 100%;
  height: 100%;
}
#flashcard-overlay {
  background-color: rgba(222, 222, 222, 0.31);
}
/* #flashcard-overlay:hover {
  background-color: rgba(246, 191, 255, 0.5);
} */
#budget-overlay {
  background-color: rgba(224, 224, 224, 0.84);
}
/* #budget-overlay:hover {
  background-color: rgb(255, 117, 87, 0.4);
} */
#budget {
  top: 5rem;
  /* color: #3d3dff; */
  color: #000
}
#budget a:visited {
  color: #000;
}
#budget-header {
  position: absolute;
  left: 15.5rem;
  top: 1.9rem;
  width: 10rem;
  font-size: 3.4rem;
  letter-spacing: 6px;
  font-family: 'Karla', sans-serif;
}


/* CONTACT  */
#contact-panel {
  height: 70vh;
  font-family: 'Karla', sans-serif;
}
#header-contact {
  margin-bottom: 6rem;
  position: relative;
  letter-spacing: 22px;
  font-size: 1.5rem;
  left: -10%;
}
#contact-container {
  font-size: 1.2rem;
  letter-spacing: 6px;
  position: relative;
  margin: 0;
  width: fit-content;
  left: 30%;
}
/* .email-container {
  
} */
.follow-container {
  margin-top: 1.5rem;
  display: inline-block;
  cursor: none;
}
#follow-link {
  display: inline-block;
  margin-right: 2rem;
}
#follow-link a {
  cursor: none;
}
h4 {
  font-size: 1.2rem;
  padding: 10px 0;
  color: #808080;
}

/* div#contact-container {
  background-color: #000;
} */
/* .x {
  position: absolute;
  width: 10px;
  height: 10px;
  margin-left: -5px;
  margin-top: -5px;
  background: red;
  cursor: pointer;
  border-radius: 50%;
  z-index: 1;
}
.x:nth-child(even) {
  background: blue;
} */

/* #curved-text {
  width: 57rem; 
  height: 100vh;
  position: relative;
  left: -5%;
  top: -19rem;
}
textPath {
  font-size: 2rem;
  font-family: 'Karla', sans-serif;
  letter-spacing: 2px;
}

#my-svg {
	width:100%;
  height:auto;
  stroke-opacity: 0;
  stroke-width: 10rem;
  position: relative;
  left: -5%;
  top: -19rem;
}

path {
  fill: transparent;
} */

